# MorphWorx

./: .gitignore  Instructions.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  phaseon1-manual.md  plugin.json  surge.json
.firecrawl/: ferroklast-snare-research.json  search-jungle-scales.json
.github/: copilot-instructions.md
.github/workflows/: build-metamodule-plugins.yml  build-vcv-mac.yml  build-vcv-plugin.yml
def/: Default.bnk
docs/: README.md  aetherion-manual.md  amenolith-manual.md  ferroklast-manual.md  minimalith-manual.md  phaseon-metamodule-optimization.md  phaseon1-audit-handoff.md  phaseon1-manual.md  phaseon1-metamodule-stability-handoff.md  phaseon1-pm-golden-calibration.md  release-v0.1.0.md  release-v2.1.0.md  release-v2.1.1.md  release-v2.1.2.md  release-v2.1.3.md  repo-cleanup-audit-2026-04-07.md  septagon-manual.md  slidewyrm-manual.md  trigonomicon-manual.md  xenostasis-manual.md
metamodule/: CMakeLists.txt  generate_faceplate.py  plugin-mm.json
metamodule/assets/samples/ferroklastmm/: CH_1.raw  CH_2.raw
res/samples/ferroklastmm/: CH_3.raw  CLAP_1.raw  CLAP_2.raw  CLAP_3.raw
res/samples/tr909/: bassdrum-attack.raw  bassdrum-cycle.raw  clap.raw  ride.raw  rim.raw
src/: Aetherion.cpp  Amenolith.cpp  BreakcoreDrums.cpp  DrumTrigger.cpp  Ferroklast.cpp  Minimalith.cpp  PatternData.hpp  PhaseWarpedDrums.cpp  PhaseWarpedDrums.hpp  Phaseon.cpp  Phaseon1.cpp  Quantizer.hpp  SlideWyrm.cpp  Trigonomicon.cpp  Xenostasis.cpp  plugin.cpp  plugin.hpp  version.h
src/core/: EnergyField.cpp  EnergyField.hpp  MetricEngine.cpp  MetricEngine.hpp  MetricSpec.hpp  PatternMemory.cpp  PatternMemory.hpp  PhaseWarper.cpp  PhaseWarper.hpp  TriggerExtractor.cpp  TriggerExtractor.hpp
src/dsp/: CircularMath.hpp  Diffusion.hpp  FDN.hpp  FerroReverb.hpp  LookupTables.cpp  LookupTables.hpp  Predelay.hpp  RandomGenerator.hpp  TapeSaturator.hpp  WowFlutter.hpp
src/pfm/: CVIn.h  EncodersListener.h  LiquidCrystal.h  Menu.h  PfmBankLoader.cpp  PfmBankLoader.h  PfmEngine.cpp  PfmEngine.h  PreenFM.h  Storage.h  SynthMenuListener.h  SynthParamListener.h  SynthState.h  SynthStateAware.h  VisualInfo.h  core_cmInstr.h  stm32f4xx_rng.h
src/pfm/hardware/: dwt.h
src/pfm/synth/: Common.cpp  Common.h  Env.cpp  Env.h  Lfo.cpp  LfoEnv.h  LfoEnv2.h  LfoOsc.h  LfoStepSeq.cpp  LfoStepSeq.h  Matrix.cpp  Osc.cpp  Osc.h  Presets.cpp  Timbre.cpp  Timbre.h  Voice.cpp  Voice.h  event_scheduler.cpp  note_stack.cpp
src/pfm/waveforms/: UserWaveforms.cpp  UserWaveforms.h  waves.c
src/phaseon/: PhaseonAlgorithm.hpp  PhaseonMacros.hpp  PhaseonModMatrix.hpp  PhaseonOperator.cpp  PhaseonOperator.hpp  PhaseonPolish.hpp  PhaseonVoice.hpp  PhaseonWavetable.cpp  PhaseonWavetable.hpp
src/sampler/: DrumKits.cpp  DrumKits.h
src/ui/: PngPanelBackground.hpp
tools/: _create_release_temp.ps1  apply_bbchar_tablecv.py  build-all.ps1  build-rack.ps1  c++filt.bat  clean-generated.ps1  deploy-metamodule.ps1  deploy-vcv-rack.ps1  gen_dubstep_formant_wt.py  gen_plugin_json.py  gen_xenostasis_wavetables.py  publish-release.ps1  update_phaseon_lfos.py
userwaveforms/: Phbank.bnk  README.txt  usr1.txt  usr2.txt  usr3.txt  usr4.txt  usr5.txt  usr6.txt
